--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     #container {
       width: 600px;
       min-height: 300px;
-      background-color: white;
+      background-color: rgb(174, 174, 174);
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       padding: 30px 40px;
